--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,6 @@
 #** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Oct 18 17:28:13 BST 2018
+#Thu Oct 25 14:18:46 CEST 2018
 redeployment.enabled=true
 encoding=UTF-8
-config.resources=api.xml,global-config.xml,global-error-handler.xml,students.xml
+config.resources=api.xml,global-config.xml,global-error-handler.xml,professors.xml,students.xml,subjects.xml
 domain=default
