Updated the flows and the output format

--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,6 +1,5 @@
-#** GENERATED CONTENT ** Mule Application Deployment Descriptor
-#Thu Oct 25 14:18:46 CEST 2018
-redeployment.enabled=true
+#Mon Oct 29 16:48:30 CET 2018
 encoding=UTF-8
-config.resources=api.xml,global-config.xml,global-error-handler.xml,professors.xml,students.xml,subjects.xml
 domain=default
+redeployment.enabled=true
+config.resources=global-config.xml,professors.xml,subjects.xml,global-error-handler.xml,api.xml,students.xml
